--- a/Polynominal.ipynb
+++ b/Polynominal.ipynb
@@ -6,6 +6,7 @@
       "name": "Polynominal.ipynb",
       "provenance": [],
       "collapsed_sections": [],
+      "toc_visible": true,
       "authorship_tag": "ABX9TyNykCuIQexSpS9vgaUQeQU2",
       "include_colab_link": true
     },
@@ -40,7 +41,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "-3nLtTsr5J5m"
+        "id": "-3nLtTsr5J5m",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "2085dc17-8cfe-4db0-f2f0-ec925f3955a7"
       },
       "source": [
         "import pandas as pd\n",
@@ -50,8 +55,17 @@
         "import statsmodels.api as sm\n",
         "import pandas.util.testing as tm"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 5,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "/usr/local/lib/python3.7/dist-packages/statsmodels/tools/_testing.py:19: FutureWarning: pandas.util.testing is deprecated. Use the functions in the public API at pandas.testing instead.\n",
+            "  import pandas.util.testing as tm\n"
+          ],
+          "name": "stderr"
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -71,7 +85,7 @@
         "#importing dataset\n",
         "data=pd.read_csv('/content/Position_Salaries.csv')"
       ],
-      "execution_count": null,
+      "execution_count": 7,
       "outputs": []
     },
     {
@@ -81,12 +95,12 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "j9cdwj1rZ3WU",
-        "outputId": "83d2bbb2-5347-4b2b-aa85-af1813bdea67"
+        "outputId": "ebbc7414-8ae6-40cf-d271-64466ad1b0ab"
       },
       "source": [
         "data.head"
       ],
-      "execution_count": null,
+      "execution_count": 8,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -108,7 +122,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 18
+          "execution_count": 8
         }
       ]
     },
@@ -120,7 +134,7 @@
       "source": [
         "data.drop('Position',axis='columns', inplace=True)"
       ],
-      "execution_count": null,
+      "execution_count": 9,
       "outputs": []
     },
     {
@@ -130,12 +144,12 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "VhgQhC98aJTz",
-        "outputId": "ccadccc5-8190-46ec-8e24-83f243decbcf"
+        "outputId": "d8cbe7a4-6a48-465e-a5c5-e22b007b7a11"
       },
       "source": [
         "data.head"
       ],
-      "execution_count": null,
+      "execution_count": 10,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -157,7 +171,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 20
+          "execution_count": 10
         }
       ]
     },
@@ -179,7 +193,7 @@
         "x=data.iloc[:,:-1].values\n",
         "y=data.iloc[:,-1].values"
       ],
-      "execution_count": null,
+      "execution_count": 11,
       "outputs": []
     },
     {
@@ -194,15 +208,32 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "BbY90STnZiOV"
+        "id": "BbY90STnZiOV",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "cb746613-a548-43af-abdf-e6fb5ce3e92f"
       },
       "source": [
         "from sklearn.linear_model import LinearRegression\n",
         "lr=LinearRegression()\n",
         "lr.fit(x,y)"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 12,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "LinearRegression(copy_X=True, fit_intercept=True, n_jobs=None, normalize=False)"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 12
+        }
+      ]
     },
     {
       "cell_type": "markdown",
